# sql-exercises

data_analysis/: README.md  pyproject.toml
data_analysis/data/: autobahn.csv
data_analysis/notebooks/: timed_stream_data.ipynb
data_analysis/src/pipelines/: transform.py  utils.py
data_analysis/tests/: test_pkw_max_velocity_per_lane.py
data_analysis/tests/_old_solutions/: __init__.py  a1.py  a2.py  a3.py  a4.py  a5.py  a6.py
